--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Here's the complete HTML code for your webpage, incorporating the navbar features and a search engine positioned correctly for both desktop and mobile views:
+
+````html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,10 +15,8 @@
           background-color: #f0f0f0;
           color: #333;
       }
-      body:hover{
-        margin: 0;
-          font-family: 'Arial', sans-serif;
-          background-color:aqua;
+      body:hover {
+          background-color: aqua;
           color: green; 
       }
 
@@ -51,11 +52,10 @@
       }
 
       h1 {
-          font-size: 3rem;
+          font-size: 2.5rem; /* Adjusted for better mobile display */
           text-align: center;
-          padding: 50px;
-          margin-top: 0px;
-          margin-bottom: 0px;
+          padding: 20px; /* Adjusted padding */
+          margin: 0;
           background-color: black;
           color: #ff3d00;
           text-shadow: 0 0 10px #ff3d00;
@@ -77,11 +77,17 @@
           border-radius: 5px;
           transition: background-color 0.3s, box-shadow 0.3s;
           box-shadow: 0 0 5px #00ff00;
+          margin: 5px 0; /* Added margin for spacing */
       }
 
       .navbar a:hover {
           background-color: gold;
           box-shadow: 0 0 15px gold;
+      }
+
+      .navbar-links {
+          display: flex;
+          flex-wrap: wrap;
       }
 
       .dropdown {
@@ -117,13 +123,13 @@
 
       .hero {
           background: url('https://example.com/hero-image.jpg') no-repeat center center/cover;
-          height: 200px;
+          height: 150px; /* Adjusted for mobile */
           display: flex;
           justify-content: center;
           align-items: center;
           text-align: center;
           color: white;
-          font-size: 2rem;
+          font-size: 1.5rem; /* Adjusted for mobile */
           text-shadow: 0 0 10px #ff3d00;
       }
 
@@ -135,10 +141,10 @@
 
       .sidebar {
           flex: 1;
-          min-width: 250px;
+          min-width: 250px; /* Minimum width for sidebar */
           background-color: #ffffff;
           color: #333;
-          padding: 20px;
+          padding: 15px; /* Adjusted padding */
           border-radius: 8px;
           margin-right: 20px;
           box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -161,7 +167,7 @@
       .content-container {
           flex: 3;
           background-color: #ffffff;
-          padding: 20px;
+          padding: 15px; /* Adjusted padding */
           border-radius: 8px;
           box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       }
@@ -173,7 +179,7 @@
           border-radius: 5px;
           font-family: 'Courier New', monospace;
           overflow: auto;
-          height: 300px;
+          height: 250px; /* Adjusted for mobile */
           margin-bottom: 20px;
           box-shadow: 0 0 10px #007BFF;
       }
@@ -191,13 +197,45 @@
       }
 
       @media (max-width: 600px) {
+          h1 {
+              font-size: 2rem; /* Responsive heading */
+          }
+
+          .navbar {
+              flex-direction: column; /* Stack navbar items */
+              align-items: flex-start; /* Align items to the start */
+          }
+
+          .navbar-links {
+              display: none; /* Hide links initially */
+              flex-direction: column; /* Stack links vertically */
+              width: 100%; /* Full width for mobile */
+          }
+
+          .navbar-toggle {
+              display: block; /* Show hamburger icon */
+              cursor: pointer;
+              font-size: 24px; /* Size of the hamburger icon */
+              color: white;
+              margin-left: auto; /* Align to the right */
+          }
+
+          .navbar.active .navbar-links {
+              display: flex; /* Show links when active */
+          }
+
           .container {
-              flex-direction: column;
+              flex-direction: column; /* Stack container items */
           }
 
           .sidebar {
               margin-right: 0;
               margin-bottom: 20px;
+          }
+
+          .hero {
+              height: 100px; /* Adjusted height for mobile */
+              font-size: 1.2rem; /* Adjusted for mobile */
           }
       }
 
@@ -220,33 +258,36 @@
   <header>
       <h1>Welcome to Our Abid Computer Lab</h1>
       <div class="navbar">
-          <a href="index.html">Home</a>
-          <a href="about.html">About Us</a>
-          <div class="dropdown">
-              <a href="#">Courses</a>
-              <div class="dropdown-content">
-                  <a href="#" onclick="showContent(event, 'Computer Information')">Computer Information</a>
-                  <a href="#" onclick="showContent(event, 'Website Building')">Website Building</a>
-                  <a href="#" onclick="showContent(event, 'Graphic Designing')">Graphic Designing</a>
-                  <a href="#" onclick="showContent(event, 'Ethical Hacking')">Ethical Hacking</a>
-                  <a href="#" onclick="showContent(event, 'Data Science')">Data Science</a>
-                  <a href="#" onclick="showContent(event, 'Digital Marketing')">Digital Marketing</a>
-                  <a href="#" onclick="showContent(event, 'Mobile App Development')">Mobile App Development</a>
+          <div class="navbar-toggle" onclick="toggleNavbar()">&#9776;</div> <!-- Hamburger icon -->
+          <div class="navbar-links">
+              <a href="index.html">Home</a>
+              <a href="about.html">About Us</a>
+              <div class="dropdown">
+                  <a href="#">Courses</a>
+                  <div class="dropdown-content">
+                      <a href="#" onclick="showContent(event, 'Computer Information')">Computer Information</a>
+                      <a href="#" onclick="showContent(event, 'Website Building')">Website Building</a>
+                      <a href="#" onclick="showContent(event, 'Graphic Designing')">Graphic Designing</a>
+                      <a href="#" onclick="showContent(event, 'Ethical Hacking')">Ethical Hacking</a>
+                      <a href="#" onclick="showContent(event, 'Data Science')">Data Science</a>
+                      <a href="#" onclick="showContent(event, 'Digital Marketing')">Digital Marketing</a>
+                      <a href="#" onclick="showContent(event, 'Mobile App Development')">Mobile App Development</a>
+                  </div>
               </div>
+              <a href="resources.html">Resources</a>
+              <a href="https://draft.dev/learn/computer-science-blogs">Blog</a>
+              <a href="https://en.wikipedia.org/wiki/Event_(computing)">Events</a>
+              <a href="https://www.computerhope.com/qanda.htm">FAQ</a>
+              <a href="contact.html">Contact</a>
+              <a href="Sign Up.html">Sign Up</a>
+              <a href="Loginpage.html">Login</a>
+              <a href="PictureGallery.html">Picture Gallery</a>
+              <a href="NeonGlowing Calculator.html">Calculator</a>
+              <form action="https://www.google.com/search" method="get" style="display: flex; align-items: center; margin-left: auto;">
+                  <input type="text" name="q" placeholder="Abid Search Engine" required>
+                  <button type="submit">Search</button>
+              </form>
           </div>
-          <a href="resources.html">Resources</a>
-          <a href="https://draft.dev/learn/computer-science-blogs">Blog</a>
-          <a href="https://en.wikipedia.org/wiki/Event_(computing)">Events</a>
-          <a href="https://www.computerhope.com/qanda.htm">FAQ</a>
-          <a href="contact.html">Contact</a>
-          <a href="Sign Up.html">Sign Up</a>
-          <a href="Loginpage.html">Login</a>
-          <a href="PictureGallery.html">Picture Gallery</a>
-          <a href="NeonGlowing Calculator.html">Calculator</a>
-          <form action="https://www.google.com/search" method="get" style="display: flex; align-items: center; margin-left: auto;">
-              <input type="text" name="q" placeholder="Abid Search Engine" required>
-              <button type="submit">Search</button>
-          </form>
       </div>
   </header>
 
@@ -283,6 +324,11 @@
   </div>
 
   <script>
+      function toggleNavbar() {
+          const navbar = document.querySelector('.navbar');
+          navbar.classList.toggle('active');
+      }
+
       function showContent(event, item) {
           event.preventDefault(); // Prevent default anchor behavior
           const terminalDisplay = document.getElementById('terminalDisplay');
@@ -356,17 +402,17 @@
                             `<h4>Key Strategies:</h4>` +
                             `<ul>` +
                             `<li><strong>Search Engine Optimization (SEO)</strong>: The process of optimizing a website to rank higher in search engine results pages (SERPs).</li>` +
-                            `<li><strong>Content Marketing</strong>: Creating and distributing valuable, relevant content to attract and engage a target audience.</li>` +
-                            `<li><strong>Social Media Marketing</strong>: Using social media platforms to connect with your audience to build your brand, increase sales, and drive website traffic.</li>` +
-                            `<li><strong>Email Marketing</strong>: Sending targeted emails to prospects and customers to convert them into buyers and turn one-time buyers into loyal fans.</li>` +
+                            `<li><strong>Content Marketing</strong>: Creating valuable content to attract and engage a target audience.</li>` +                            `<li><strong>Social Media Marketing</strong>: Using social media platforms to connect with audiences, build brand awareness, and drive website traffic.</li>` +
+                            `<li><strong>Email Marketing</strong>: Sending targeted emails to prospects and customers to promote products and services.</li>` +
+                            `<li><strong>Pay-Per-Click (PPC) Advertising</strong>: A model of internet marketing where advertisers pay a fee each time one of their ads is clicked.</li>` +
                             `</ul>`;
                   break;
               case 'Mobile App Development':
                   content = `<h3 class="mobile-app-development">Mobile App Development</h3>` +
                             `<p>Mobile app development is the process of creating software applications that run on mobile devices.</p>` +
-                            `<h4>Key Technologies:</h4>` +
+                            `<h4>Key Platforms:</h4>` +
                             `<ul>` +
-                            `<li><strong>iOS Development</strong>: Using Swift or Objective-C to develop applications for Apple devices.</li>` +
+                            `<li><strong>iOS Development</strong>: Building applications for Apple's iOS platform using Swift or Objective-C.</li>` +
                             `<li><strong>Android Development</strong>: Utilizing Kotlin or Java to create applications for Android devices.</li>` +
                             `<li><strong>Cross-Platform Development</strong>: Frameworks like React Native and Flutter allow developers to build apps for both iOS and Android using a single codebase.</li>` +
                             `<li><strong>User Experience (UX) Design</strong>: Focusing on how the app feels to the user, ensuring it is easy to use and meets their needs.</li>` +
@@ -391,13 +437,13 @@
           // Call OpenAI API
           const apiKey = 'YOUR_OPENAI_API_KEY'; // Replace with your OpenAI API key
           const response = await fetch('https://api.openai.com/v1/chat/completions', {
-            method: 'POST',
+              method: 'POST',
               headers: {
                   'Content-Type': 'application/json',
                   'Authorization': `Bearer ${apiKey}`
               },
               body: JSON.stringify({
-                  model: 'gpt-3.5-turbo', // or 'g-pt-4' if you have access
+                  model: 'gpt-3.5-turbo', // or 'gpt-4' if you have access
                   messages: [{ role: 'user', content: chatInput }],
                   max_tokens: 150
               })
@@ -433,7 +479,5 @@
       <h4>About Us</h4>
       <p>We are dedicated to providing quality education and resources to help you enhance your skills and knowledge in various fields of technology.</p>
   </footer>
-
 </body>
 </html>
-
